--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
         }
     ],
     "require": {
+        "php": "^8.1",
         "vlucas/phpdotenv": "^5.4",
         "grimm1994/grimm-core": "^1.0"
     }
