--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,7 @@
     "name": "grimm1994/grimm-framework",
     "autoload": {
         "psr-4": {
-            "app\\": "./"
+            "app\\": "app/"
         }
     },
     "authors": [
